Bootstrap, and console error added

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 
   <body class="text-center">
 
-    <div class="app" id="app"><h4>B-Day</h4></div>
+    <div class="app" id="app">
+      <h4>B-Day</h4>
+      <button class="btn btn-danger">Bootstrap Button</button>
+      <br>
+    </div>
 
   </body>
 
