--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   <body class="text-center">
 
     <div class="app" id="app">
-      <h4>B-Day</h4>
-      <button class="btn btn-danger">Bootstrap Button</button>
-      <br>
+      <div class="navbar" id="navbar"></div>
+      <div class="auth" id="auth"></div>
+      <div class="bday" id="bday"></div>
     </div>
 
   </body>
