--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,29 @@
 
   <body class="text-center">
 
-    <div class="app" id="app">
-      <div class="navbar" id="navbar"></div>
+      <div class="navbar" id="navbar">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <a class="navbar-brand" href="#">Birthday</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a id="navbar-button-auth" class="nav-link">Authentication</a>
+                  </li>
+                  <li class="nav-item">
+                    <a id="navbar-button-birthday" class="nav-link hide">My Birthday</a>
+                  </li>
+                  <li class="nav-item">
+                    <a id="navbar-button-logout" class="nav-link hide">Logout</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+      </div>
       <div class="auth" id="auth"></div>
-      <div class="bday" id="bday"></div>
-    </div>
+      <div class="bday hide" id="bday"></div>
 
   </body>
 
