bday printing from firebase

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- vvvv-favicon fix-vvvvv -->
+    <link rel="shortcut icon" href="#" />
     <title>B-Day</title>
 
   </head>
@@ -33,8 +35,16 @@
               </div>
             </nav>
       </div>
+                                                          <!-- ________________________________________________________ -->
       <div class="auth" id="auth"></div>
-      <div class="bday hide" id="bday"></div>
+
+      <div class="bday hide" id="bday">
+
+        <div id="event"></div>
+        
+        <div id="friends"></div>
+
+      </div>
 
   </body>
 
