--- a/src/index.html
+++ b/src/index.html
@@ -43,19 +43,9 @@
       <div id="friends"></div>
     </div>
 
-    <div id="new-friend" class="hide new-friend">
-        <form class="col-6 offset-3">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="John Doe">
-          </div>
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
-          </div>
-          <button type="submit" id="saveNewFriend" class="btn btn-primary">Add Friend</button>
-        </form>
-      </div>
+<div id="friends-table">
+  <div id="new-friend" class="new-friend"></div>
+</div>
 
   </body>
 
