--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <!-- vvvv-favicon fix-vvvvv -->
+      <link rel="shortcut icon" href="#" />
   <title>MAH birthday</title>
 </head>
 <body>
   <div id="navbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">birthday</a>
+      <a class="navbar-brand" href="#">Birthday</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item" id="login-auth">
+
+          </li>
           <li class="nav-item">
             <a id="navbar-button-auth" class="nav-link">Authentication</a>
           </li>
           <li class="nav-item">
-            <a id="navbar-button-birthday" class="nav-link hide">My birthday</a>
+            <a id="navbar-button-birthday" class="nav-link hide">My Birthday</a>
           </li>
           <li class="nav-item">
             <a id="navbar-button-logout" class="nav-link hide">Logout</a>
